# agentic_dev

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
erp/: .gitignore  README.md  package-lock.json  package.json
erp/docs/: company-brief.md
erp/docs/adr/: 0000-template.md  0001-model-driven-architecture.md  0002-storage-strategy-postgres-hybrid.md  0003-expression-and-action-language.md  0004-multi-company-tenancy.md  0005-gated-delivery-and-weak-model-strategy.md
erp/docs/company/: contribution-model.md  first-phase-tasks.md  organization.md  plan.json  roadmap.md
erp/docs/governance/: artifact-catalog.md  contribution-model.md  org-charter.md  project-plan.md
erp/docs/templates/: metadata-spec-template.md  prd-template.md
erp/frontend/: README.md
erp/infra/: README.md
erp/infra/docker/: docker-compose.yml
erp/modules/: README.md
erp/platform-spec/: README.md
erp/platform-spec/examples/: domain-reference.json  entity.json  form.json  list.json  rule.json  test-plan.json  workflow.json
erp/platform-spec/schemas/: _common.schema.json  action.schema.json  domain-reference.schema.json  entity.schema.json  field.schema.json  form.schema.json  json-logic.schema.json  list.schema.json  rule.schema.json  (+3 more)
erp/services/: README.md
erp/tools/: README.md
forge/: .env.example  Cargo.toml  README.md
forge/src/: config.rs  git.rs  github.rs  issues.rs  llm.rs  main.rs  orchestrator.rs  plan.rs  pr.rs  render.rs  schema.rs  state.rs  util.rs
forge/src/agents/: architect.rs  ceo.rs  domain_modeler.rs  mod.rs  qa.rs  tech_lead.rs
(+2 files in other folders)
